Tue Oct 29 09:53:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* insns.def, vm.c, vm_insnhelper.c, vm_insnhelper.h, vm_method.c: split
	  ruby_vm_global_state_version into two separate counters - one for the
	  global method state and one for the global constant state. This means
	  changes to constants do not affect method caches, and changes to
	  methods do not affect constant caches. In particular, this means
	  inclusions of modules containing constants no longer globally
	  invalidate the method cache.

	* class.c, eval.c, include/ruby/intern.h, insns.def, vm.c, vm_method.c:
	  rename rb_clear_cache_by_class to rb_clear_method_cache_by_class

	* class.c, include/ruby/intern.h, variable.c, vm_method.c: add
	  rb_clear_constant_cache

	* compile.c, vm_core.h, vm_insnhelper.c: rename vmstat field in
	  rb_call_info_struct to method_state

	* vm_method.c: rename vmstat field in struct cache_entry to method_state

Mon Oct 28 23:26:04 2013  Tanaka Akira  <akr@fsij.org>

	* test/readline/test_readline.rb (teardown): Clear Readline.input and
	  Readline.output.

Mon Oct 28 21:35:31 2013  Tanaka Akira  <akr@fsij.org>

	* ext/-test-/file/depend, ext/-test-/postponed_job/depend,
	  ext/-test-/tracepoint/depend: New files for dependencies.

Mon Oct 28 15:32:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/depend (ossl.o): work around of dependency of
	  thread_native.h, which depends on headers by THREAD_MODEL.
	  [ruby-dev:47777]

	* ext/openssl/extconf.rb: need THREAD_MODEL.

Mon Oct 28 14:57:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (ruby_init_ext): share feature names between frame name and
	  provided features.

Mon Oct 28 14:41:27 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el: Import ruby-electric.el 2.1 from
	  https://github.com/knu/ruby-electric.el.

	  * Hitting the newline-and-indent key within a comment fires
	    comment-indent-new-line.

	  * Introduce a new feature